force-app/main/default/objects/PBB_ROA_Entity__c/PBB_ROA_Entity__c.object-meta.xml
<CustomObject>
    <description>PBB ROA Entity (US-1378).</description>
    <label>PBB ROA Entity</label>
    <nameField>
        <label>PBB ROA Entity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PBB ROA Entities</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>