force-app/main/default/objects/PBB_ROA_Entity__c/fields/Business_Center__c.field-meta.xml
<CustomField>
    <fullName>Business_Center__c</fullName>
    <description>Business Banking/Commercial Banking (department) (US-1378)</description>
    <inlineHelpText>Business Banking/Commercial Banking (department)</inlineHelpText>
    <label>Business Center</label>
    <length>30</length>
    <type>Text</type>
</CustomField>