force-app/main/default/objects/PBB_ROA_Entity__c/fields/Capital_Labour_Intensity__c.field-meta.xml
<CustomField>
    <fullName>Capital_Labour_Intensity__c</fullName>
    <description>An indication of whether the industry is either capital or labour intensive in nature and some information as to why this is the case (US-1378)</description>
    <inlineHelpText>An indication of whether the industry is either capital or labour intensive in nature and some information as to why this is the case</inlineHelpText>
    <label>Capital / Labour Intensity</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>