force-app/main/default/objects/PBB_ROA_Entity__c/fields/Cellphone_BCH__c.field-meta.xml
<CustomField>
    <fullName>Cellphone_BCH__c</fullName>
    <description>Head&apos;s cellphone number (US-1378)</description>
    <inlineHelpText>Head&apos;s cellphone number</inlineHelpText>
    <label>Cellphone (BCH)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>