force-app/main/default/objects/PBB_ROA_Entity__c/fields/Cellphone_RM__c.field-meta.xml
<CustomField>
    <fullName>Cellphone_RM__c</fullName>
    <description>Relationship Manager&apos;s cellphone number (US-1378)</description>
    <inlineHelpText>Relationship Manager&apos;s cellphone number</inlineHelpText>
    <label>Cellphone (RM)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>