force-app/main/default/objects/PBB_ROA_Entity__c/fields/Challenges_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Challenges_Opportunities__c</fullName>
    <description>Challenges/Opportunities the client is experiencing (US-1378)</description>
    <inlineHelpText>Challenges/Opportunities the client is experiencing</inlineHelpText>
    <label>Challenges/Opportunities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>