force-app/main/default/objects/PBB_ROA_Entity__c/fields/Customer_Value_Perception__c.field-meta.xml
<CustomField>
    <fullName>Customer_Value_Perception__c</fullName>
    <description>Why do they make banking decisions (US-1378)</description>
    <inlineHelpText>Why do they make banking decisions</inlineHelpText>
    <label>Customer Value Perception</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>