force-app/main/default/objects/PBB_ROA_Entity__c/fields/Email_BCH__c.field-meta.xml
<CustomField>
    <fullName>Email_BCH__c</fullName>
    <description>Head&apos;s email (US-1378)</description>
    <inlineHelpText>Head&apos;s email</inlineHelpText>
    <label>Email (BCH)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>