force-app/main/default/objects/PBB_ROA_Entity__c/fields/Email_RM__c.field-meta.xml
<CustomField>
    <fullName>Email_RM__c</fullName>
    <description>Relationship Manager&apos;s email (US-1378)</description>
    <inlineHelpText>Relationship Manager&apos;s email</inlineHelpText>
    <label>Email (RM)</label>
    <type>Email</type>
</CustomField>