force-app/main/default/objects/PBB_ROA_Entity__c/fields/Head__c.field-meta.xml
<CustomField>
    <fullName>Head__c</fullName>
    <description>This is the name either the Head of Commercial in-country or the Commercial Suite Head to which the RM reports to (US-1378)</description>
    <inlineHelpText>This is the name either the Head of Commercial in-country or the Commercial Suite Head to which the RM reports to</inlineHelpText>
    <label>Head</label>
    <length>75</length>
    <type>Text</type>
</CustomField>