force-app/main/default/objects/PBB_ROA_Entity__c/fields/Market_Share_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Market_Share_Percentage__c</fullName>
    <description>Approximate market share of the client (US-1378)</description>
    <inlineHelpText>Approximate market share of the client</inlineHelpText>
    <label>Market Share %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>