force-app/main/default/objects/PBB_ROA_Entity__c/fields/Medium_to_Long_Term_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Medium_to_Long_Term_Strategy__c</fullName>
    <description>This is a list of all medium to long term goals that the client will undertake to improve their operations and therefore make a positive contribution to the company’s profits (US-1378)</description>
    <inlineHelpText>This is a list of all medium to long term goals that the client will undertake to improve their operations and therefore make a positive contribution to the company’s profits</inlineHelpText>
    <label>Medium to Long Term Strategy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>