force-app/main/default/objects/PBB_ROA_Entity__c/fields/Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Opportunities__c</fullName>
    <description>A summary of the current opportunities available to the Client (business expansion, increased production, new contracts, new product lines, new markets, etc. ) (US-1378)</description>
    <inlineHelpText>A summary of the current opportunities available to the Client (business expansion, increased production, new contracts, new product lines, new markets, etc. )</inlineHelpText>
    <label>Opportunities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>