force-app/main/default/objects/PBB_ROA_Entity__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <description>Parent company of client (US-1378)</description>
    <inlineHelpText>Parent company of client</inlineHelpText>
    <label>Parent PBB ROA Entity</label>
    <length>80</length>
    <type>Text</type>
</CustomField>