force-app/main/default/objects/PBB_ROA_Entity__c/fields/Postal_Address__c.field-meta.xml
<CustomField>
    <fullName>Postal_Address__c</fullName>
    <description>Client&apos;s postal address (US-1378)</description>
    <inlineHelpText>Client&apos;s postal address</inlineHelpText>
    <label>Postal  Address</label>
    <type>TextArea</type>
</CustomField>