force-app/main/default/objects/PBB_ROA_Entity__c/fields/Province_Region_RM__c.field-meta.xml
<CustomField>
    <fullName>Province_Region_RM__c</fullName>
    <description>Province of the Relationship Manager (US-1378)</description>
    <inlineHelpText>Province of the Relationship Manager</inlineHelpText>
    <label>Province/Region (RM)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>