force-app/main/default/objects/PBB_ROA_Entity__c/fields/Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Name__c</fullName>
    <description>DEF-001978:CommB - ROA 1 - Create object within CommB Org to store PBB ROA Entity data</description>
    <inlineHelpText>This field will store the Record Type name of PBB ROA Entities object</inlineHelpText>
    <label>Record Type Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial Client</fullName>
            </value>
            <value>
                <fullName>SME Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>