force-app/main/default/objects/PBB_ROA_Entity__c/fields/Relationship_Manager__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Manager__c</fullName>
    <description>Relationship Manager name (US-1378)</description>
    <inlineHelpText>Relationship Manager name</inlineHelpText>
    <label>Relationship Manager</label>
    <length>75</length>
    <type>Text</type>
</CustomField>