force-app/main/default/objects/PBB_ROA_Entity__c/fields/ROA_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>ROA_Customer_Number__c</fullName>
    <description>Client CIF number as captured in PBB ROA Instance (US-1378)</description>
    <inlineHelpText>Client CIF number as captured in PBB ROA Instance</inlineHelpText>
    <label>ROA Customer Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>