force-app/main/default/objects/PBB_ROA_Entity__c/fields/ROA_SF_Id__c.field-meta.xml
<CustomField>
    <fullName>ROA_SF_Id__c</fullName>
    <description>ROA Org Salesforce Id (US-1378).</description>
    <externalId>true</externalId>
    <inlineHelpText>ROA Org Salesforce Id.</inlineHelpText>
    <label>ROA SF Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>