force-app/main/default/objects/PBB_ROA_Entity__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Active or Inactive (US-1378)</description>
    <inlineHelpText>Active or Inactive</inlineHelpText>
    <label>PBB ROA Entity Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>