force-app/main/default/objects/PBB_ROA_Entity__c/fields/Strengths__c.field-meta.xml
<CustomField>
    <fullName>Strengths__c</fullName>
    <description>A summary of the Client’s strengths and how this relates to other competitors and their position in the market (US-1378)</description>
    <inlineHelpText>A summary of the Client’s strengths and how this relates to other competitors and their position in the market</inlineHelpText>
    <label>Strengths</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>