force-app/main/default/objects/PBB_ROA_Entity__c/fields/Telephone_BCH__c.field-meta.xml
<CustomField>
    <fullName>Telephone_BCH__c</fullName>
    <description>Head&apos;s telephone number (US-1378)</description>
    <inlineHelpText>Head&apos;s telephone number</inlineHelpText>
    <label>Telephone (BCH)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>