force-app/main/default/objects/PBB_ROA_Entity__c/fields/Telephone_RM__c.field-meta.xml
<CustomField>
    <fullName>Telephone_RM__c</fullName>
    <description>Relationship Manager&apos;s telephone number (US-1378)</description>
    <inlineHelpText>Relationship Manager&apos;s telephone number</inlineHelpText>
    <label>Telephone (RM)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>