force-app/main/default/objects/PBB_ROA_Entity__c/fields/Threats__c.field-meta.xml
<CustomField>
    <fullName>Threats__c</fullName>
    <description>A summary of the threats to the Client’s business, as well as the industry in which they operate in (US-1378)</description>
    <inlineHelpText>A summary of the threats to the Client’s business, as well as the industry in which they operate in</inlineHelpText>
    <label>Threats</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>