force-app/main/default/objects/PBB_ROA_Entity__c/fields/Weaknesses__c.field-meta.xml
<CustomField>
    <fullName>Weaknesses__c</fullName>
    <description>A summary of the Client&apos;s weaknesses and how this relates to other competitors and their position in the market (US-1378)</description>
    <inlineHelpText>A summary of the Client&apos;s weaknesses and how this relates to other competitors and their position in the market</inlineHelpText>
    <label>Weaknesses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>