force-app/main/default/objects/PBB_ROA_Entity__c/recordTypes/Commercial_Client.recordType-meta.xml
<RecordType>
    <fullName>Commercial_Client</fullName>
    <active>true</active>
    <description>Commercial Client as captured in PBB ROA instance (US-1378)</description>
    <label>Commercial Client</label>
</RecordType>