force-app/main/default/objects/PBB_ROA_Entity__c/recordTypes/SME_Client.recordType-meta.xml
<RecordType>
    <fullName>SME_Client</fullName>
    <active>true</active>
    <description>SME Client as captured in PBB ROA instance (US-1378)</description>
    <label>SME Client</label>
</RecordType>