force-app/main/default/objects/PBB_ROA_Entity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Parent__c</columns>
    <columns>ROA_Customer_Number__c</columns>
    <columns>Status__c</columns>
    <columns>Relationship_Manager__c</columns>
    <columns>Telephone_RM__c</columns>
    <columns>Business_Center__c</columns>
    <columns>Head__c</columns>
    <columns>Telephone_BCH__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>