force-app/main/default/objects/PBB_ROA_Entity__c/listViews/ROA_SME_Entities.listView-meta.xml
<ListView>
    <fullName>ROA_SME_Entities</fullName>
    <columns>NAME</columns>
    <columns>Parent__c</columns>
    <columns>ROA_Customer_Number__c</columns>
    <columns>Status__c</columns>
    <columns>Relationship_Manager__c</columns>
    <columns>Telephone_RM__c</columns>
    <columns>Business_Center__c</columns>
    <columns>Head__c</columns>
    <columns>Telephone_BCH__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>PBB_ROA_Entity__c.SME_Client</value>
    </filters>
    <label>ROA SME Entities</label>
</ListView>